force-app/main/default/objects/Case_Request__c/Case_Request__c.object-meta.xml
<CustomObject>
    <description>Logging customer support requests.</description>
    <label>Case Request</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Case Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>