force-app/main/default/objects/Case_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Full details of the support request.</description>
    <inlineHelpText>Describe the issue encountered with as much detail as possible.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>