force-app/main/default/objects/Case_Request__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Details on how the support request was resolved.</description>
    <inlineHelpText>Provide a clear explanation of the solution applied, actions taken and any relevant information.</inlineHelpText>
    <label>Resolution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>