force-app/main/default/objects/Case_Request__c/fields/SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline__c</fullName>
    <description>Deadline for resolving the request.</description>
    <inlineHelpText>Date and time limit to resolve the issue according to SLA.</inlineHelpText>
    <label>SLA Deadline</label>
    <type>DateTime</type>
</CustomField>