force-app/main/default/objects/Case_Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Support request title.</description>
    <inlineHelpText>Provide a brief summary of the issue.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>