force-app/main/default/objects/Case_Request__c/recordTypes/Premium_Support.recordType-meta.xml
<RecordType>
    <fullName>Premium_Support</fullName>
    <active>true</active>
    <description>Requests with reduced SLA and access to exclusive features.</description>
    <label>Premium Support</label>
</RecordType>