force-app/main/default/objects/Case_Request__c/recordTypes/Standard_Support.recordType-meta.xml
<RecordType>
    <fullName>Standard_Support</fullName>
    <active>true</active>
    <description>Requests with SLA default andwithout access to exclusive features.</description>
    <label>Standard Support</label>
</RecordType>