force-app/main/default/objects/Case_Request__c/validationRules/Ensure_Resolution_Notes_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Resolution_Notes_When_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  
 ISPICKVAL( Status__c , &quot;Closed&quot;),  
 ISBLANK( Resolution_Notes__c )  
)</errorConditionFormula>
    <errorDisplayField>Resolution_Notes__c</errorDisplayField>
    <errorMessage>Before closing a request, please fill in the Resolution Notes field.</errorMessage>
</ValidationRule>