force-app/main/default/objects/Case_Request__c/validationRules/Prevents_Standard_Support_Reopening_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevents_Standard_Support_Reopening_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 $Profile.Name = &quot;Support Standard&quot;,
 ISPICKVAL(PRIORVALUE( Status__c ),&quot;Closed&quot;)
)</errorConditionFormula>
    <errorMessage>Closed cases not possible to open.</errorMessage>
</ValidationRule>