force-app/main/default/objects/Case_Request__c/listViews/My_Cases_Premium_Support.listView-meta.xml
<ListView>
    <fullName>My_Cases_Premium_Support</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case_Request__c.Premium_Support</value>
    </filters>
    <label>Cases (Premium Support)</label>
    <sharedTo>
        <group>Premium_Support_Group</group>
    </sharedTo>
</ListView>