force-app/main/default/objects/Case_Request__c/listViews/Standard_Support_List_View.listView-meta.xml
<ListView>
    <fullName>Standard_Support_List_View</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case_Request__c.Standard_Support</value>
    </filters>
    <label>Cases (Standard Support)</label>
    <sharedTo>
        <group>Standard_Support_Group</group>
    </sharedTo>
</ListView>